# adventofcode

./: pyproject.toml
events/2022/solutions/: day01.py  day02.py  day03.py
events/2023/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
src/aoc/: __main__.py  aoc.py  files.py  log.py  utils.py
src/aoc/template/: solution.txt
